WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157201
REGRESSION(194502): overflow: scroll; direction: rtl; divs jump horizontally when scrolled vertically
https://bugs.webkit.org/show_bug.cgi?id=157201
Summary
REGRESSION(194502): overflow: scroll; direction: rtl; divs jump horizontally ...
Myles C. Maxfield
Reported
2016-04-29 14:34:40 PDT
Go to a page with a scrollable (in both dimensions) RTL div. Drag the vertical scroller. Notice how the horizontal scroller jumps all the way to the left.
Attachments
Repro
(252 bytes, text/html)
2016-04-29 14:35 PDT
,
Myles C. Maxfield
no flags
Details
Patch
(4.87 KB, patch)
2016-04-29 15:20 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-yosemite
(844.88 KB, application/zip)
2016-04-29 15:56 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews105 for mac-yosemite-wk2
(779.70 KB, application/zip)
2016-04-29 16:07 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews125 for ios-simulator-wk2
(635.91 KB, application/zip)
2016-04-29 16:14 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews117 for mac-yosemite
(900.22 KB, application/zip)
2016-04-29 16:26 PDT
,
Build Bot
no flags
Details
Patch
(5.51 KB, patch)
2016-04-29 17:48 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(5.10 KB, patch)
2016-04-29 18:08 PDT
,
Myles C. Maxfield
simon.fraser
: review+
mmaxfield
: commit-queue-
Details
Formatted Diff
Diff
Patch for committing
(4.96 KB, patch)
2016-04-29 18:15 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch for committing
(4.96 KB, patch)
2016-04-29 18:16 PDT
,
Myles C. Maxfield
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews123 for ios-simulator-wk2
(648.92 KB, application/zip)
2016-04-29 19:01 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews125 for ios-simulator-wk2
(911.01 KB, application/zip)
2016-04-29 19:02 PDT
,
Build Bot
no flags
Details
Patch for committing
(5.66 KB, patch)
2016-04-29 20:02 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(10)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2016-04-29 14:35:23 PDT
Created
attachment 277733
[details]
Repro
Myles C. Maxfield
Comment 2
2016-04-29 14:35:46 PDT
This is important for the RTL Scrollbars work.
Radar WebKit Bug Importer
Comment 3
2016-04-29 14:36:39 PDT
<
rdar://problem/26013903
>
Myles C. Maxfield
Comment 4
2016-04-29 15:20:42 PDT
Created
attachment 277737
[details]
Patch
Build Bot
Comment 5
2016-04-29 15:56:32 PDT
Comment on
attachment 277737
[details]
Patch
Attachment 277737
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/1241652
New failing tests: fast/scrolling/rtl-drag-vertical-scroller.html
Build Bot
Comment 6
2016-04-29 15:56:37 PDT
Created
attachment 277744
[details]
Archive of layout-test-results from ews102 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 7
2016-04-29 16:07:07 PDT
Comment on
attachment 277737
[details]
Patch
Attachment 277737
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/1241676
New failing tests: fast/scrolling/rtl-drag-vertical-scroller.html
Build Bot
Comment 8
2016-04-29 16:07:11 PDT
Created
attachment 277747
[details]
Archive of layout-test-results from ews105 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 9
2016-04-29 16:14:27 PDT
Comment on
attachment 277737
[details]
Patch
Attachment 277737
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/1241683
New failing tests: fast/scrolling/rtl-drag-vertical-scroller.html
Build Bot
Comment 10
2016-04-29 16:14:31 PDT
Created
attachment 277749
[details]
Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Build Bot
Comment 11
2016-04-29 16:26:26 PDT
Comment on
attachment 277737
[details]
Patch
Attachment 277737
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/1241712
New failing tests: fast/scrolling/rtl-drag-vertical-scroller.html
Build Bot
Comment 12
2016-04-29 16:26:30 PDT
Created
attachment 277754
[details]
Archive of layout-test-results from ews117 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-yosemite Platform: Mac OS X 10.10.5
Myles C. Maxfield
Comment 13
2016-04-29 17:03:27 PDT
Oh, this test should be marked as failing on these OSes.
Myles C. Maxfield
Comment 14
2016-04-29 17:48:57 PDT
Created
attachment 277767
[details]
Patch
Simon Fraser (smfr)
Comment 15
2016-04-29 17:52:23 PDT
Comment on
attachment 277767
[details]
Patch r-: the test should work everywhere.
Myles C. Maxfield
Comment 16
2016-04-29 18:08:13 PDT
Created
attachment 277771
[details]
Patch
Myles C. Maxfield
Comment 17
2016-04-29 18:15:26 PDT
Created
attachment 277773
[details]
Patch for committing
Myles C. Maxfield
Comment 18
2016-04-29 18:16:28 PDT
Created
attachment 277775
[details]
Patch for committing
Build Bot
Comment 19
2016-04-29 19:01:33 PDT
Comment on
attachment 277771
[details]
Patch
Attachment 277771
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/1242392
New failing tests: fast/scrolling/rtl-drag-vertical-scroller.html
Build Bot
Comment 20
2016-04-29 19:01:37 PDT
Created
attachment 277778
[details]
Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Build Bot
Comment 21
2016-04-29 19:02:02 PDT
Comment on
attachment 277775
[details]
Patch for committing
Attachment 277775
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/1242393
New failing tests: fast/scrolling/rtl-drag-vertical-scroller.html
Build Bot
Comment 22
2016-04-29 19:02:06 PDT
Created
attachment 277779
[details]
Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Myles C. Maxfield
Comment 23
2016-04-29 20:02:44 PDT
Created
attachment 277786
[details]
Patch for committing
WebKit Commit Bot
Comment 24
2016-04-29 20:54:10 PDT
Comment on
attachment 277786
[details]
Patch for committing Clearing flags on attachment: 277786 Committed
r200282
: <
http://trac.webkit.org/changeset/200282
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug