REGRESSION(194502): overflow: scroll; direction: rtl; divs jump horizontally when scrolled vertically https://bugs.webkit.org/show_bug.cgi?id=157201

Reviewed by Simon Fraser.

Source/WebCore:

ScrollableArea::scrollToOffsetWithoutAnimation() was mistakenly conflating scroll offsets with
scroll positions.

Test: fast/scrolling/rtl-drag-vertical-scroller.html

* platform/ScrollableArea.cpp:
(WebCore::ScrollableArea::scrollToOffsetWithoutAnimation):

LayoutTests:

* fast/scrolling/rtl-drag-vertical-scroller-expected.txt: Added.
* fast/scrolling/rtl-drag-vertical-scroller.html: Added.


Canonical link: https://commits.webkit.org/175322@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200282 268f45cc-cd09-0410-ab3c-d52691b4dbfc